# pve

./: pve_help.tex
matlab/: fastmcdm.m  mahalanobis_error.m  mahalanobis_error_em.m  minvarellipse.m  param_estim_multi.m  pve_error.m  pve_error_exact.m
results/: ibsr_jaccard.mat  mah_error.mat  params_T1T2PD_3mm_real.mat  params_T1T2PD_em_3mm_2.mat  params_T1T2PD_inu40_em.mat  params_T1T2PD_inu40_real.mat  params_T1T2PD_real.mat  params_em_inu0.mat  params_em_inu0_3mm.mat  params_em_inu0_trantags.mat  params_em_inu40.mat  params_real.mat  params_real_3mm.mat  params_real_inu40.mat  params_trantags.mat  paramstesti_3mm_T1T2PD.mat  paramtesti1.mat  paramtesti1_40.mat  paramtesti5.mat  paramtesti5_40.mat  paramtesti9.mat  paramtesti9_40.mat  paramtesti_T1T2PD_em.mat  paramtesti_T1T2PD_em_3mm.mat  paramtesti_T1T2PD_em_trantags.mat  paramtesti_inu0_3mm.mat  paramtesti_inu0_6neigh.mat  paramtesti_inu0_T1T2PD.mat  paramtesti_inu40_6neigh.mat  paramtesti_inu40_T1T2PD.mat  paramtesti_trantags_T1T2PD.mat  paramtesti_trantags_T1T2PD_mve.mat  pve3_results.mat  pve3_results_3mm.mat  pve3_results_3mm_em.mat  pve3_results_3mm_em_2.mat  pve3_results_em.mat  pve3_results_em_2.mat  pve3_results_em_trantags.mat  pve3_results_inu40.mat  (+15 more)
src/: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  ParseArgv.h  README  configure.ac  epm-header.in  geo_smooth.cc  kth_smallest.c  least_trimmed_squares.c  least_trimmed_squares.h  make_curvature_volume.cc  matrix3.c  matrix3.h  minvarellipsoid.c  minvarellipsoid.h  minvarellipsoid3.c  minvarellipsoid3.h  pve.c  pve3.c  pve3_aux.c  pve3_aux.h  pve_aux.c  pve_aux.h  pve_common.c  pve_common.h  pve_support.h  time_stamp.h
src/models/: Makefile.am  gipt.mnc  gipt_icbm152symVI.mnc
src/scripts/: Makefile.am  discretize_pve.in  discretize_pve.pl  pve_4classes.in  pve_4classes.pl  pve_curvature.in  pve_curvature.pl  pve_insect.in  pve_insect.pl  pve_script.in  pve_script.pl
